syntax = "proto3";

option csharp_namespace = "SensorsService";

import "Protos/empty.proto";
import "Protos/any.proto";
import "Protos/timestamp.proto";

package sensors;

service Sensors {
	rpc GetMonitoringTree (google.protobuf.Empty) returns (SensorsUpdateMessage);
	rpc GetMonitoringUpdates (google.protobuf.Empty) returns (SensorsUpdateMessage);
}

message SensorsUpdateMessage {
	repeated SensorUpdateMessage sensors = 1;
}

message SensorUpdateMessage {
	string Name = 1;
	string Path = 2;
	string Product = 3;
	enum TransactionType {
		TRANS_NONE = 0;
		TRANS_ADD = 1;
		TRANS_REMOVE = 2;
		TRANS_UPDATE = 3;
	}
	TransactionType ActionType = 4;
	enum SensorObjectType {
		OBJECT_TYPE_NONE = 0;
		OBJECT_TYPE_JOB_SENSOR = 1;
		OBJECT_TYPE_PERFORMANCE_SENSOR = 2;
	}
	SensorObjectType ObjectType = 5;
	bytes dataObject = 6;
	google.protobuf.Timestamp time = 7;
}