syntax = "proto3";

option csharp_namespace = "HSMService";

import "Protos/empty.proto";
import "Protos/any.proto";
import "Protos/timestamp.proto";

package HSMService;

service Sensors {
	//Sensors methods
	rpc GetMonitoringTree (google.protobuf.Empty) returns (SensorsUpdateMessage);
	rpc GetMonitoringUpdates (google.protobuf.Empty) returns (SensorsUpdateMessage);
	//rpc GetSensorHistory (GetSensorHistoryMessage) returns (SensorsUpdateMessage);
	rpc GetSensorHistory (GetSensorHistoryMessage) returns (SensorHistoryListMessage);

	//Products methods
	rpc GetProductsList (google.protobuf.Empty) returns (ProductsListMessage);
	rpc AddNewProduct (AddProductMessage) returns (AddProductResultMessage);
	rpc RemoveProduct (RemoveProductMessage) returns (RemoveProductResultMessage);
	
	//Certificates
	rpc GenerateServerCertificate (CertificateRequestMessage) returns (GenerateServerCertificateResulMessage);
	rpc SignClientCertificate (CertificateSignRequestMessage) returns (SignedCertificateMessage);

	//Admin methods
	rpc CheckServerAvailable (google.protobuf.Empty) returns (ServerAvailableMessage);
	rpc GetLastAvailableClientVersion (google.protobuf.Empty) returns (ClientVersionMessage);
}

service Admin {
	rpc GetUpdateInfo (google.protobuf.Empty) returns (UpdateInfoMessage);
	rpc GetUpdateStream (UpdateStreamRequestMessage) returns (stream UpdateStreamMessage);
}

//Admin messages
message UpdateInfoMessage {
	repeated string files = 1;
	double size = 2;
}

message UpdateStreamMessage {
	int32 blockIndex = 1;
	int32 blockSize = 2;
	bytes bytesData = 3;
}

message UpdateStreamRequestMessage {
	string fileName = 1;
}

//Sensor updates
message SensorsUpdateMessage {
	repeated SensorUpdateMessage sensors = 1;
}

enum SensorObjectType {
	OBJECT_TYPE_NONE = 0;
	OBJECT_TYPE_BOOL_SENSOR = 1;
	OBJECT_TYPE_INT_SENSOR = 2;
	OBJECT_TYPE_DOUBLE_SENSOR = 3;
	OBJECT_TYPE_STRING_SENSOR = 4;
	OBJECT_TYPE_BAR_DOUBLE_SENSOR = 5;
	OBJECT_TYPE_BAR_INT_SENSOR = 6;
}

message SensorUpdateMessage {
	string Path = 1;
	string Product = 2;
	enum TransactionType {
		TRANS_NONE = 0;
		TRANS_ADD = 1;
		TRANS_REMOVE = 2;
		TRANS_UPDATE = 3;
	}
	TransactionType ActionType = 3;
	SensorObjectType ObjectType = 4;
	google.protobuf.Timestamp time = 5;
	string shortValue = 6;
}

//Sensors history
message GetSensorHistoryMessage {
	string name = 1;
	string path = 2;
	string product = 3;
	int64 n = 4;
}

message SensorHistoryListMessage {
	repeated SensorHistoryMessage sensors = 1;
}

message SensorHistoryMessage {
	google.protobuf.Timestamp time = 1;
	SensorObjectType type = 2;
	string typedData = 3; 
}

//Products
message ProductsListMessage {
	repeated ProductDataMessage products = 1;
}

message ProductDataMessage {
	string Name = 1;
	string Key = 2;
	google.protobuf.Timestamp DateAdded = 3;
}

message AddProductMessage {
	string name = 1;
}

message AddProductResultMessage {
	bool result = 1;
	string error = 2;
	ProductDataMessage productData = 3;
}

message RemoveProductMessage {
	string name = 1;
}

message RemoveProductResultMessage {
	bool result = 1;
	string error = 2;
	ProductDataMessage productData = 3;
}


//Admin methods

message ClientVersionMessage {
	int32 mainVersion = 1;
	int32 subVersion = 2;
	int32 extraVersion = 3;
	string postfix = 4;
}

message ClientCertificateMessage {
	bytes certificateBytes = 1;
}

message GenerateServerCertificateResulMessage {
	bool result = 1;
	string error = 2;
}

message CertificateRequestMessage {
	string countryName = 1;
	string stateOrProvinceName = 2;
	string localityName = 3;
	string OrganizationName = 4;
	string OrganizationUnitName = 5;
	string CommonName = 6;
	string EmailAddress = 7;
}

message ServerAvailableMessage {
	google.protobuf.Timestamp time = 1;
}

message CertificateSignRequestMessage {
	string subject = 1;
	RSAParameters RSAParameters = 2;
	string CommonName = 3;
}

message RSAParameters {
	bytes inverseQ = 1;
	bytes D = 2;
	bytes DP = 3;
	bytes DQ = 4;
	bytes exponent = 5;
	bytes modulus = 6;
	bytes P = 7;
	bytes Q = 8;
}

message SignedCertificateMessage {
	bytes signedCertificateBytes = 1;
	bytes caCertificateBytes = 2;
}