syntax = "proto3";

option csharp_namespace = "SensorsService";

package sensors;

service Sensors {
	// Sends a greeting
	rpc GetSingleSensorInfo (SensorRequest) returns (SensorResponse);
	
	rpc GetSensorsInfo (SensorsRequest) returns (SensorsResponse);
}

message SensorsRequest{
	string machineName = 1;
	string sensorName = 2;
	int32 n = 3;
}

message SensorRequest {
	string machineName = 1;
	string sensorName = 2;
}

// The response message containing the greetings.
message SensorResponse {
	bool success = 1;
	string comment = 2;
	int64 ticks = 3;
}

message SensorsResponse{
	repeated SensorResponse sensors = 1;
}